# xorg-libX11

./: .gitignore  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/im/: CMakeLists.txt
modules/im/ximcp/: CMakeLists.txt
modules/lc/: CMakeLists.txt
modules/lc/Utf8/: CMakeLists.txt
modules/lc/def/: CMakeLists.txt
modules/om/generic/: CMakeLists.txt
src/: CMakeLists.txt  KeysymStr.c  StrKeysym.c  xcb_disp.c  xcb_io.c
src/util/: CMakeLists.txt
src/xcms/: CMakeLists.txt
src/xkb/: CMakeLists.txt
src/xlibi18n/: CMakeLists.txt  xim_trans.c
