add_library(x11-XI18N_DL
      XlcDL.c
      XlcSL.c
)

target_link_libraries(
      x11-XI18N_DL PRIVATE
      x11-root-target
)

target_compile_definitions(
      x11-XI18N_DL PRIVATE
      _DEFAULT_SOURCE
)

add_library(x11-libi18n STATIC
      XlcDL.c
      XlcSL.c
      XDefaultIMIF.c 
	XDefaultOMIF.c 
	xim_trans.c
	ICWrap.c
	IMWrap.c
	imKStoUCS.c
	lcCT.c
	lcCharSet.c
	lcConv.c
	lcDB.c
	lcDynamic.c
	lcFile.c
	lcGeneric.c
	lcInit.c
	lcPrTxt.c
	lcPubWrap.c
	lcPublic.c
	lcRM.c
	lcStd.c
	lcTxtPr.c
	lcUTF8.c
	lcUtil.c
	lcWrap.c
	mbWMProps.c
	mbWrap.c
	utf8WMProps.c
	utf8Wrap.c
	wcWrap.c
	Xaixlcint.h
	XimImSw.h
	XimProto.h
	XimThai.h
	XimTrInt.h
	XimTrX.h
	XimTrans.h
	Ximint.h
	XimintL.h
	XimintP.h
	XlcGeneric.h
	XlcPubI.h
	XlcPublic.h
	Xlcint.h
	lcUniConv/armscii_8.h
	lcUniConv/ascii.h
	lcUniConv/big5.h
	lcUniConv/big5_emacs.h
	lcUniConv/big5hkscs.h
	lcUniConv/cp1133.h
	lcUniConv/cp1251.h
	lcUniConv/cp1255.h
	lcUniConv/cp1256.h
	lcUniConv/gb2312.h
	lcUniConv/gbk.h
	lcUniConv/georgian_academy.h
	lcUniConv/georgian_ps.h
	lcUniConv/iso8859_1.h
	lcUniConv/iso8859_10.h
	lcUniConv/iso8859_11.h
	lcUniConv/iso8859_13.h
	lcUniConv/iso8859_14.h
	lcUniConv/iso8859_15.h
	lcUniConv/iso8859_16.h
	lcUniConv/iso8859_2.h
	lcUniConv/iso8859_3.h
	lcUniConv/iso8859_4.h
	lcUniConv/iso8859_5.h
	lcUniConv/iso8859_6.h
	lcUniConv/iso8859_7.h
	lcUniConv/iso8859_8.h
	lcUniConv/iso8859_9.h
	lcUniConv/iso8859_9e.h
	lcUniConv/jisx0201.h
	lcUniConv/jisx0208.h
	lcUniConv/jisx0212.h
	lcUniConv/koi8_c.h
	lcUniConv/koi8_r.h
	lcUniConv/koi8_u.h
	lcUniConv/ksc5601.h
	lcUniConv/mulelao.h
	lcUniConv/tatar_cyr.h
	lcUniConv/tcvn.h
	lcUniConv/tis620.h
	lcUniConv/ucs2be.h
	lcUniConv/utf8.h
	lcUniConv/viscii.h
)

target_link_libraries(x11-libi18n
      x11-libxlcDef
      x11-libxlibi18n
      x11-libxlcUTF8Load
      x11-libximcp
      x11-libxomGeneric
      x11-root-target
)
add_dependencies(x11-libi18n x11-root-target)

target_compile_definitions(x11-libi18n PRIVATE 
      XLOCALELIBDIR=\"${CMAKE_BINARY_DIR}\"
)
